<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="localhost.ass_2.QuestionnaireActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_columnWeight="4"
        android:layout_gravity="top|center|left"
        android:background="@android:drawable/editbox_background_normal"
        android:id="@+id/questionView"/>

    <RadioGroup
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_never"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_infrequently"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_sometimes"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_frequently"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_always"/>

    </RadioGroup>
    
    <Button
        android:layout_gravity="bottom|right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"/>

</android.support.v7.widget.LinearLayoutCompat>
