<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="localhost.ass_2.QuestionnaireInfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tmq_intro_para_1"
        android:textSize="18sp" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tmq_intro_para_2"
        android:textSize="18sp" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tmq_intro_para_3"
        android:textSize="18sp" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tmq_intro_para_4"
        android:textSize="18sp" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/b_startQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToQuizSection1"
        android:text="@string/button_start" />

</android.support.v7.widget.LinearLayoutCompat>
