<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="localhost.ass_2.MainActivity">

    <GridLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:id="@+id/addTaskButton"
            android:onClick="addTask"
            android:text="@string/add_task_name" />

        <Button
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="2"/>

        <Button
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:id="@+id/manageTasksButton"
            android:onClick="manageTasks"
            android:text="@string/manage_tasks_name" />

        <Button
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <Button
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:id="@+id/takeQuizButton"
            android:onClick="takeQuiz"
            android:text="@string/questionnaire_name" />

        <Button
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

    </GridLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:drawable/editbox_background_normal"
        android:isScrollContainer="true">

    </ListView>

</android.support.v7.widget.LinearLayoutCompat>
